[tool.poetry]
name = "osemn-ds"
version = "0.1.0"
description = "Python package filled with helper functions to assist data scientists in their quest across the OSEMN process."
authors = ["Dushyant Khosla <dushyant.khosla@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
xlrd = "^1.2.0"
openpyxl = "^3.0.4"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.1"
graphviz = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
